Moving from ToolTipHost to ToolTip. Fixing Layout issues

--- a/src/WebUI/Common/Common.scss
+++ b/src/WebUI/Common/Common.scss
@@ -12,8 +12,6 @@
 }
 
 .list-col-content {
-    align-items: center;
-    line-height: 40px;
 
     &.two-lines {
         line-height: 30px;
