--- a/src/WebUI/Common/ResourceStatus.scss
+++ b/src/WebUI/Common/ResourceStatus.scss
@@ -5,3 +5,9 @@
     width: 100%;
     align-self: stretch;
 }
+
+.res-status {
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+}
